--- a/audioFrame.html
+++ b/audioFrame.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8" />
     <script>
       window.addEventListener("message", (event) => {
+        console.log("Iframe got message:", event.data);
         if (typeof event.data === "object" && event.data.type === "PLAY_AUDIO") {
           const base64Audio = event.data.base64;
-          if (!base64Audio) return;
+          console.log("PLAY_AUDIO with length:", base64Audio?.length);
 
           const audioUrl = "data:audio/mpeg;base64," + base64Audio;
+
           const audio = new Audio(audioUrl);
-          audio.play();
+          audio.play()
+            .then(() => console.log("Iframe: Audio playback started!"))
+            .catch(err => console.error("Iframe: Audio playback blocked/failed:", err));
         }
       });
     </script>
   </head>
-  <body></body>
+  <body>
+    <p>audioFrame test loaded</p>
+  </body>
 </html>
+
 
 
