--- a/audioFrame.html
+++ b/audioFrame.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <script>
+      let storedBase64 = null;
+
+      // Listen for messages from Wix code
       window.addEventListener("message", (event) => {
         console.log("Iframe got message:", event.data);
         if (typeof event.data === "object" && event.data.type === "PLAY_AUDIO") {
-          const base64Audio = event.data.base64;
-          console.log("PLAY_AUDIO with length:", base64Audio?.length);
-
-          const audioUrl = "data:audio/mpeg;base64," + base64Audio;
-
-          const audio = new Audio(audioUrl);
-          audio.play()
-            .then(() => console.log("Iframe: Audio playback started!"))
-            .catch(err => console.error("Iframe: Audio playback blocked/failed:", err));
+          storedBase64 = event.data.base64; // just store it
+          console.log("PLAY_AUDIO with length:", storedBase64.length);
+          // We do NOT audio.play() here, to avoid NotAllowedError
         }
       });
+
+      // We'll run audio.play() only after the user clicks the local button
+      function onIframePlayButtonClick() {
+        if (!storedBase64) {
+          console.warn("No audio stored yet!");
+          return;
+        }
+        const audioUrl = "data:audio/mpeg;base64," + storedBase64;
+        const audio = new Audio(audioUrl);
+
+        audio.play()
+          .then(() => console.log("Iframe: Audio playback started!"))
+          .catch(err => console.error("Iframe: Audio playback blocked/failed:", err));
+      }
     </script>
   </head>
   <body>
-    <p>audioFrame test loaded</p>
+    <p>audioFrame loaded. Waiting for base64 + user click.</p>
+    <button onclick="onIframePlayButtonClick()">Play Audio (Iframe)</button>
   </body>
 </html>
 
