--- a/audioFrame.html
+++ b/audioFrame.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <script>
       let storedBase64 = null;
-
-      // Listen for messages from Wix code
       window.addEventListener("message", (event) => {
         console.log("Iframe got message:", event.data);
-        if (typeof event.data === "object" && event.data.type === "PLAY_AUDIO") {
-          storedBase64 = event.data.base64; // just store it
+        if (event.data?.type === "PLAY_AUDIO") {
+          storedBase64 = event.data.base64;
           console.log("PLAY_AUDIO with length:", storedBase64.length);
-          // We do NOT audio.play() here, to avoid NotAllowedError
+          // Do NOT call audio.play() here to avoid NotAllowedError
         }
       });
 
-      // We'll run audio.play() only after the user clicks the local button
       function onIframePlayButtonClick() {
         if (!storedBase64) {
-          console.warn("No audio stored yet!");
+          console.warn("No audio yet!");
           return;
         }
         const audioUrl = "data:audio/mpeg;base64," + storedBase64;
         const audio = new Audio(audioUrl);
-
         audio.play()
           .then(() => console.log("Iframe: Audio playback started!"))
           .catch(err => console.error("Iframe: Audio playback blocked/failed:", err));
@@ -31,10 +27,7 @@
     </script>
   </head>
   <body>
-    <p>audioFrame loaded. Waiting for base64 + user click.</p>
-    <button onclick="onIframePlayButtonClick()">Play Audio (Iframe)</button>
+    <p>audioFrame loaded. Click the button below after parent sends base64:</p>
+    <button onclick="onIframePlayButtonClick()">Play Audio (Inside Iframe)</button>
   </body>
 </html>
-
-
-
