--- a/audioFrame.html
+++ b/audioFrame.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8" />
     <script>
       let storedBase64 = null;
+
+      // We store the audio data when the parent sends a message
       window.addEventListener("message", (event) => {
         console.log("Iframe got message:", event.data);
         if (event.data?.type === "PLAY_AUDIO") {
           storedBase64 = event.data.base64;
           console.log("PLAY_AUDIO with length:", storedBase64.length);
-          // Do NOT call audio.play() here to avoid NotAllowedError
+          // Do NOT call audio.play() automatically here.
         }
       });
 
+      // Called by a local button click inside the iframe
       function onIframePlayButtonClick() {
         if (!storedBase64) {
-          console.warn("No audio yet!");
+          console.warn("No audio data received yet!");
           return;
         }
         const audioUrl = "data:audio/mpeg;base64," + storedBase64;
         const audio = new Audio(audioUrl);
+
         audio.play()
           .then(() => console.log("Iframe: Audio playback started!"))
           .catch(err => console.error("Iframe: Audio playback blocked/failed:", err));
@@ -27,7 +31,7 @@
     </script>
   </head>
   <body>
-    <p>audioFrame loaded. Click the button below after parent sends base64:</p>
+    <p>audioFrame loaded. Click “Load Audio” in parent to send data, then press “Play Audio” here:</p>
     <button onclick="onIframePlayButtonClick()">Play Audio (Inside Iframe)</button>
   </body>
 </html>
