--- a/audioFrame.html
+++ b/audioFrame.html
@@ -2,22 +2,23 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+
     <script>
       let storedBase64 = null;
 
-      // Listen for messages from parent
+      // This event listener receives messages from your Wix code
       window.addEventListener("message", (event) => {
         if (typeof event.data === "object" && event.data.type === "PLAY_AUDIO") {
           storedBase64 = event.data.base64;
           console.log("PLAY_AUDIO with length:", storedBase64.length);
-          // Do NOT call audio.play() here, or it will be blocked
+          // DO NOT auto-play here (blocked if no in-frame gesture).
         }
       });
 
-      // Called when user clicks the button in this same iframe
+      // Called when user clicks the "Play Audio (Inside Iframe)" button
       function onIframePlayButtonClick() {
         if (!storedBase64) {
-          console.warn("No audio data received yet!");
+          console.warn("No audio data stored yet!");
           return;
         }
         const audioUrl = "data:audio/mpeg;base64," + storedBase64;
@@ -27,10 +28,36 @@
           .then(() => console.log("Iframe: Audio playback started!"))
           .catch(err => console.error("Iframe: Audio playback blocked or failed:", err));
       }
+
+      // A function to let you download the same base64 as an MP3 file
+      // so you can open it in VLC/iTunes
+      function onDownloadTestClick() {
+        if (!storedBase64) {
+          alert("No MP3 data to download yet!");
+          return;
+        }
+        const mp3Url = "data:audio/mpeg;base64," + storedBase64;
+
+        // Create a temporary link to trigger download
+        const link = document.createElement('a');
+        link.href = mp3Url;
+        link.download = "test.mp3"; // The filename user sees
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+        console.log("Download triggered for test.mp3");
+      }
     </script>
   </head>
   <body>
-    <p>audioFrame loaded. Once the parent sends MP3 data, click the button below to play it.</p>
+    <h3>audioFrame loaded. Steps:</h3>
+    <ol>
+      <li>Wait for parent to send MP3 data (log appears in console).</li>
+      <li>Click "Play Audio" (inside this iframe) to attempt playback.</li>
+      <li>Or "Download Test" to save the file and check if it’s valid in VLC/iTunes.</li>
+    </ol>
+
     <button onclick="onIframePlayButtonClick()">Play Audio (Inside Iframe)</button>
+    <button onclick="onDownloadTestClick()">Download Test MP3</button>
   </body>
 </html>
