--- a/audioFrame.html
+++ b/audioFrame.html
@@ -25,7 +25,7 @@
           return;
         }
 
-        const audioUrl = "data:audio/mpeg;base64," + storedBase64;
+        const audioUrl = "data:audio/mp3;base64," + storedBase64;
         const audio = new Audio(audioUrl);
 
         // Attempt playback
